# doc/swagger/simple_bank.swagger.json
@@ -90,7 +90,7 @@
       }
     },
     "/v1/update_user": {
-      "post": {
+      "patch": {
         "summary": "Update user",
         "description": "Use this API to update user",
         "operationId": "SimpleBank_UpdateUser",
@@ -131,7 +131,7 @@
         "username": {
           "type": "string"
         },
-        "fullName": {
+        "full_name": {
           "type": "string"
         },
         "email": {
@@ -167,20 +167,20 @@
         "user": {
           "$ref": "#/definitions/pbUser"
         },
-        "sessionId": {
+        "session_id": {
           "type": "string"
         },
-        "accessToken": {
+        "access_token": {
           "type": "string"
         },
-        "refreshToken": {
+        "refresh_token": {
           "type": "string"
         },
-        "accessTokenExpiresAt": {
+        "access_token_expires_at": {
           "type": "string",
           "format": "date-time"
         },
-        "refreshTokenExpiresAt": {
+        "refresh_token_expires_at": {
           "type": "string",
           "format": "date-time"
         }
@@ -192,7 +192,7 @@
         "username": {
           "type": "string"
         },
-        "fullName": {
+        "full_name": {
           "type": "string"
         },
         "email": {
@@ -217,17 +217,17 @@
         "username": {
           "type": "string"
         },
-        "fullName": {
+        "full_name": {
           "type": "string"
         },
         "email": {
           "type": "string"
         },
-        "passwordChangedAt": {
+        "password_changed_at": {
           "type": "string",
           "format": "date-time"
         },
-        "createdAt": {
+        "created_at": {
           "type": "string",
           "format": "date-time"
         }
